Move to Vue single file components with webpack

--- a/src/wwwroot/index.html
+++ b/src/wwwroot/index.html
@@ -6,423 +6,14 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
   <title>g_</title>
 </head>
 <body>
-  <div id="app">
-    <nav class="navbar fixed-top navbar-light bg-light">
-      <span class="navbar-text" v-if="selectedUser">
-        {{ selectedUser.username }}'s games
-      </span>
-      <form class="form-inline">
-        <button type="button"
-                class="btn btn-success mr-2"
-                :disabled="!!newGame"
-                @click="addGame"
-                v-if="canEdit">
-          New
-        </button>
-        <button type="button"
-                class="btn btn-outline-primary mr-2"
-                :disabled="!!isSettingsOpen"
-                @click="openSettings"
-                v-if="canEdit">
-          Settings
-        </button>
-        <button type="button"
-                class="btn btn-outline-primary mr-2"
-                @click="logOut"
-                v-if="isLoggedIn">
-          Log out
-        </button>
-        <button type="button"
-                class="btn btn-outline-primary mr-2"
-                @click="openLogin"
-                v-else>
-          Log in
-        </button>
-        <input type="search"
-                class="form-control"
-                placeholder="Search"
-                :value="search"
-                @input="debouncedSearch">
-      </form>
-    </nav>
-    <div class="container-fluid">
-      <div class="row" v-if="isLoginOpen">
-        <div class="col pb-3">
-          <login-form :api="api"
-                      @login="loggedIn"
-                      @cancel="closeLogin">
-          </login-form>
-        </div>
-      </div>
-      <div class="row" v-if="isSettingsOpen">
-        <div class="col pb-3">
-          <system-settings :genres="sortedGenres"
-                           :platforms="sortedPlatforms"
-                           :tags="sortedTags"
-                           :api="api"
-                           @save="settingsSaved"
-                           @cancel="closeSettings">
-          </system-settings>
-        </div>
-      </div>
-      <div class="row" v-if="!!newGame">
-        <div class="col col-lg-10 col-xl-8 mx-lg-auto pb-3">
-          <game-item :game="newGame"
-                     :all-genres="sortedGenres"
-                     :all-platforms="sortedPlatforms"
-                     :all-tags="sortedTags"
-                     :api="api"
-                     :is-editable="canEdit"
-                     :is-new="true"
-                     :is-assisted="isAssistedCreationEnabled"
-                     @save="gameSaved"
-                     @cancel="newGameCancelled">
-          </game-item>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 col-lg-10 col-xl-6 mx-lg-auto pb-3"
-             v-for="game in filteredGames"
-             :key="game.id">
-          <game-item :game="game"
-                     :all-genres="sortedGenres"
-                     :all-platforms="sortedPlatforms"
-                     :all-tags="sortedTags"
-                     :api="api"
-                     :is-editable="canEdit"
-                     :is-new="false"
-                     :is-assisted="false"
-                     @save="gameSaved"
-                     @remove="gameRemoved">
-          </game-item>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script type="text/x-template" id="game-item-template">
-    <div class="card h-100">
-      <form class="card-body" @submit.prevent="save" @keyup.esc="cancel" v-if="isEditing">
-        <div class="row">
-          <div class="col-4">
-            <div class="cover">
-              <img :src="edited.image" class="rounded img-fluid" v-if="edited.image && !imageRemoved">
-              <h4 v-else>No image</h4>
-            </div>
-            <div class="form-group mt-3">
-              <label class="custom-file">
-                <input type="file"
-                       class="custom-file-input"
-                       :disabled="isSaving"
-                       @change="updateImage"
-                       ref="imageInput">
-                <span class="custom-file-control">{{ imageFile && imageFile.name }}</span>
-              </label>
-            </div>
-            <div class="form-group" v-if="imageUrl">
-              <input type="text" class="form-control" readonly v-model="imageUrl">
-            </div>
-            <div class="form-group">
-              <button type="button"
-                      class="btn btn-outline-danger"
-                      :disabled="isSaving"
-                      @click="removeImage"
-                      v-if="(edited.image || imageFile || imageUrl) && !imageRemoved">
-                Delete image
-              </button>
-            </div>
-          </div>
-          <div class="col-8">
-            <div class="form-row">
-              <div class="col-8 form-group">
-                <div class="dropdown">
-                  <input type="text"
-                         class="form-control"
-                         placeholder="Title"
-                         required
-                         v-model="edited.title"
-                         v-focus
-                         @input="titleChanged"
-                         ref="titleInput"
-                         data-toggle="dropdown">
-                  <div class="dropdown-menu">
-                    <button type="button"
-                            class="dropdown-item"
-                            v-for="completion in completions"
-                            :key="completion.id"
-                            @click="selectCompletion(completion)">
-                      {{ completion.title }}
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="col-4 form-group">
-                <input type="number"
-                       class="form-control"
-                       placeholder="Release year"
-                       required
-                       v-model.number="edited.year">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="col-8 form-group">
-                <input type="text"
-                       class="form-control"
-                       placeholder="Sort as"
-                       v-model="edited.sort_as">
-              </div>
-              <div class="col-4 form-group">
-                <div class="form-check">
-                  <label class="form-check-label">
-                    <input type="checkbox"
-                           class="form-check-input"
-                           v-model="edited.currently_playing">
-                    Playing
-                  </label>
-                </div>
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="col form-group">
-                <input type="text"
-                       class="form-control"
-                       placeholder="Developer"
-                       v-model="edited.developer">
-              </div>
-              <div class="col form-group">
-                <input type="text"
-                       class="form-control"
-                       placeholder="Publisher"
-                       v-model="edited.publisher">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="col form-group">
-                <div class="form-check">
-                  <label class="form-check-label">
-                    <input type="checkbox"
-                           class="form-check-input"
-                           v-model="edited.finished"
-                           :true-value="1"
-                           :false-value="0">
-                    Finished
-                  </label>
-                </div>
-              </div>
-              <div class="col form-group">
-                <input type="text"
-                       class="form-control"
-                       placeholder="--:--:-- (playtime)"
-                       v-model="edited.playtime">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="col form-group">
-                <textarea rows="6"
-                          class="form-control"
-                          placeholder="Comment"
-                          v-model="edited.comment"></textarea>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <div class="form-row">
-              <div class="col form-group">
-                <h5>Platforms</h5>
-                <descriptor-list :items="allPlatforms" v-model="edited.platform_ids"></descriptor-list>
-              </div>
-              <div class="col form-group">
-                <h5>Genres</h5>
-                <descriptor-list :items="allGenres" v-model="edited.genre_ids"></descriptor-list>
-              </div>
-              <div class="col form-group">
-                <h5>Tags</h5>
-                <descriptor-list :items="allTags" v-model="edited.tag_ids"></descriptor-list>
-              </div>
-            </div>
-            <div class="d-flex justify-content-between">
-              <div>
-                <button type="submit" class="btn btn-success" :disabled="isSaving">
-                  Save
-                </button>
-                <button type="button" class="btn btn-outline-secondary" :disabled="isSaving" @click="cancel">
-                  Cancel
-                </button>
-              </div>
-              <button type="button" class="btn btn-outline-danger" :disabled="isSaving" @click="remove" v-if="!isNew">
-                Delete
-              </button>
-            </div>
-          </div>
-        </div>
-      </form>
-      <div class="row card-body" v-else>
-        <div class="col-4">
-          <div class="cover">
-            <img :src="game.image" class="rounded img-fluid" v-if="game.image">
-            <h4 v-else>No image</h4>
-          </div>
-        </div>
-        <div class="col-8">
-          <div class="h-100 d-flex flex-column justify-content-between">
-            <div>
-              <h4>
-                <i class="fa fa-play-circle" v-if="game.currently_playing"></i>
-                {{ game.title }}
-                <small v-if="game.year">({{ game.year }})</small>
-              </h4>
-              <p>{{ byLine }}</p>
-              <p>
-                <i class="fa" :class="game.finished === 1 ? 'fa-check-square-o' : 'fa-square-o'"></i>
-                {{ playtime }}
-                <br>
-                <i class="fa fa-comment"></i> {{ comment }}
-              </p>
-              <p>
-                <i class="fa fa-gamepad"></i> {{ platforms }}<br>
-                <i class="fa fa-book"></i> {{ genres }}<br>
-                <i class="fa fa-tag"></i> {{ tags }}
-              </p>
-            </div>
-            <div class="text-right" v-if="isEditable">
-              <button type="button" class="btn btn-outline-primary" @click="edit">
-                Edit
-              </button>
-              <button type="button" class="btn btn-outline-danger" @click="remove">
-                Delete
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </script>
-
-  <script type="text/x-template" id="descriptor-list-template">
-    <div>
-      <div class="form-check" v-for="item in items" :key="item.id">
-        <label class="form-check-label">
-          <input type="checkbox"
-                 class="form-check-input"
-                 v-model="cloned"
-                 :value="item.id"
-                 @change="update">
-          {{ item.name }}
-        </label>
-      </div>
-    </div>
-  </script>
-
-  <script type="text/x-template" id="system-settings-template">
-    <form class="card" @submit.prevent="save" @keyup.esc="cancel">
-      <div class="card-body">
-        <div class="row">
-          <div class="col-12 col-lg-4">
-            <h4>Genres</h4>
-            <descriptors-editor :items="editedGenres"
-                                @add="addGenre"
-                                @remove="removeGenre">
-            </descriptors-editor>
-          </div>
-          <div class="col-12 col-lg-4">
-            <h4>Platforms</h4>
-            <descriptors-editor :items="editedPlatforms"
-                                @add="addPlatform"
-                                @remove="removePlatform">
-            </descriptors-editor>
-          </div>
-          <div class="col-12 col-lg-4">
-            <h4>Tags</h4>
-            <descriptors-editor :items="editedTags"
-                                @add="addTag"
-                                @remove="removeTag">
-            </descriptors-editor>
-          </div>
-        </div>
-        <div>
-          <button type="submit" class="btn btn-success">
-            Save
-          </button>
-          <button type="button" class="btn btn-outline-secondary" @click="cancel">
-            Cancel
-          </button>
-        </div>
-      </div>
-    </form>
-  </script>
-
-  <script type="text/x-template" id="descriptors-editor-template">
-    <div>
-      <div class="form-row" v-for="item in items" :key="item.id">
-        <div class="col-6 form-group">
-          <input type="text"
-                 class="form-control"
-                 required
-                 placeholder="Name"
-                 v-model="item.name">
-        </div>
-        <div class="col-4 form-group">
-          <input type="text"
-                 class="form-control"
-                 required
-                 placeholder="Short name"
-                 v-model="item.short_name">
-        </div>
-        <div class="col-2 form-group">
-          <button type="button" class="btn btn-outline-danger" @click="remove(item)">
-            <i class="fa fa-times"></i>
-          </button>
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="col form-group">
-          <button type="button" class="btn btn-outline-success" @click="add">
-            <i class="fa fa-plus"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-  </script>
-
-  <script type="text/x-template" id="login-form-template">
-    <form class="card" @submit.prevent="login" @keyup.esc="cancel">
-      <div class="card-body">
-        <div class="form-group">
-          <input type="text"
-                 class="form-control"
-                 required
-                 placeholder="Username"
-                 v-model="username"
-                 :class="{ 'is-invalid': !!error }"
-                 @input="clearError">
-        </div>
-        <div class="form-group">
-          <input type="password"
-                 class="form-control"
-                 required
-                 placeholder="Password"
-                 v-model="password"
-                 :class="{ 'is-invalid': !!error }"
-                 @input="clearError">
-        </div>
-        <button type="submit" class="btn btn-success">
-          Log in
-        </button>
-      </div>
-    </form>
-  </script>
+  <div id="app"></div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <script src="app.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
